test/domains/bradc/oldExtraCurlies.good
oldExtraCurlies.chpl:3: error: Values of 'domain' type do not support hash functions yet, so cannot be used as an associative domain's index type
